packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_not_auto_export_var_shadowed_in_labeled_block.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 7002
expression: output
---
==INPUT==


import { formAction$ } from 'forms';
const x = 'module-level';
export const action = formAction$((data) => {
  label: {
    const x = 'shadowed';
    break label;
  }
  return {};
});
		
============================= test.js ==

import { formActionQrl } from "forms";
import { qrl } from "@qwik.dev/core";
//
const q_action_formAction_dIQV5vh1He4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_action_formAction_dIQV5vh1He4"), "action_formAction_dIQV5vh1He4");
//
export const action = formActionQrl(q_action_formAction_dIQV5vh1He4);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,SAAS,+CAMnB\"}")
============================= test.tsx_action_formAction_dIQV5vh1He4.js (ENTRY POINT)==

export const action_formAction_dIQV5vh1He4 = (data)=>{
    return {};
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6CAGkC,CAAC;IAKjC,OAAO,CAAC;AACV\"}")
/*
{
  "origin": "test.tsx",
  "name": "action_formAction_dIQV5vh1He4",
  "entry": null,
  "displayName": "test.tsx_action_formAction",
  "hash": "dIQV5vh1He4",
  "canonicalFilename": "test.tsx_action_formAction_dIQV5vh1He4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "formAction$",
  "captures": false,
  "loc": [
    99,
    183
  ],
  "paramNames": [
    "data"
  ]
}
*/
== DIAGNOSTICS ==

[]
