packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_not_generate_conflicting_props_identifiers.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 4551
expression: output
---
==INPUT==


		import { component$, useComputed$, useTask$ } from '@qwik.dev/core'

		export default component$(({ color, ...props }) => {
		useComputed$(() => color)

		useTask$(() => {
			props.checked
		})

		return 'hi'
		})
		
============================= test.js ==

import { _restProps } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ _noopQrl("test_component_LUXeXe0DQrg");
const q_test_component_useComputed_PYU291PvidQ = /*#__PURE__*/ _noopQrl("test_component_useComputed_PYU291PvidQ");
const q_test_component_useTask_jewzFYh3XmQ = /*#__PURE__*/ _noopQrl("test_component_useTask_jewzFYh3XmQ");
//
const test_component_useComputed_PYU291PvidQ = ()=>{
    const _rawProps = _captures[0];
    return _rawProps.color;
};
q_test_component_useComputed_PYU291PvidQ.s(test_component_useComputed_PYU291PvidQ);
const test_component_useTask_jewzFYh3XmQ = ()=>{
    const props = _captures[0];
    props.checked;
};
q_test_component_useTask_jewzFYh3XmQ.s(test_component_useTask_jewzFYh3XmQ);
const test_component_LUXeXe0DQrg = (_rawProps)=>{
    const props = _restProps(_rawProps, [
        "color"
    ]);
    useComputedQrl(q_test_component_useComputed_PYU291PvidQ.w([
        _rawProps
    ]));
    useTaskQrl(q_test_component_useTask_jewzFYh3XmQ.w([
        props
    ]));
    return 'hi';
};
q_test_component_LUXeXe0DQrg.s(test_component_LUXeXe0DQrg);
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;+CAIe;;qBADgB;;;2CAGpB;;IACR,MAAM,OAAO;;;mCAJY;;;;IAC1B;;;IAEA;;;IAIA,OAAO;AACP;;AARA,6BAAe,2CAQb\"}")
== DIAGNOSTICS ==

[]
