packages/rust-optimizer/core/src/snapshots/qwik_core__test__should_not_transform_events_on_non_elements.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 4768
expression: output
---
==INPUT==


import { component$, $ } from '@qwik.dev/core';
import { CustomComponent } from './custom-component';
import { AnotherComponent } from './another-component';

export const Greeter = component$(() => {
	return (
		<div>
			<CustomComponent onClick$={() => {}}/>
			{array.map(item => (
				<AnotherComponent onClick$={() => {}}/>
			))}
		</div>
	)
});


============================= test.tsx_Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA.tsx (ENTRY POINT)==

export const Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"0EAUgC,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_AnotherComponent_onClick",
  "hash": "9BwXJW3s0yA",
  "canonicalFilename": "test.tsx_Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_n7HuG2hhU0Q",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    319,
    327
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Greeter_component_n7HuG2hhU0Q = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q"), "Greeter_component_n7HuG2hhU0Q");
//
export const Greeter = /*#__PURE__*/ componentQrl(q_Greeter_component_n7HuG2hhU0Q);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAKA,OAAO,MAAM,wBAAU,8CASpB\"}")
============================= test.tsx_Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w.tsx (ENTRY POINT)==

export const Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w = ()=>{};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"yEAQ8B,KAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_CustomComponent_onClick",
  "hash": "6xTF8kMcS9w",
  "canonicalFilename": "test.tsx_Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w",
  "path": "",
  "extension": "tsx",
  "parent": "Greeter_component_n7HuG2hhU0Q",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    251,
    259
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.tsx (ENTRY POINT)==

import { AnotherComponent } from "./another-component";
import { CustomComponent } from "./custom-component";
import { qrl } from "@qwik.dev/core";
//
const q_Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA"), "Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA");
const q_Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w"), "Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w");
//
export const Greeter_component_n7HuG2hhU0Q = ()=>{
    return <div>
			<CustomComponent onClick$={q_Greeter_component_div_CustomComponent_onClick_6xTF8kMcS9w}/>
			{array.map((item)=><AnotherComponent onClick$={q_Greeter_component_div_AnotherComponent_onClick_9BwXJW3s0yA}/>)}
		</div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;6CAKkC;IACjC,QACE,IAAI;GACJ,CAAC,gBAAgB,wEAAqB;GACtC,CAAC,MAAM,GAAG,CAAC,CAAA,QACT,iBAAiB,2EAChB;EACJ,EAAE;AAEJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    195,
    351
  ]
}
*/
== DIAGNOSTICS ==

[]
